# qpsk-transceiver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: main.cpp
examples/: coding.json  decoding.json  simulations.json
include/: block_code.hpp  channel.hpp  encoder.hpp  qpsk.hpp  system.hpp
include/decoders/: abstarct_decoder.hpp  basic_decoder.hpp  precomputed_decoder.hpp  simd_decoder.hpp
include/utils/: json_helpers.hpp  random_bits.hpp
lib/: block_code.cpp  channel.cpp  encoder.cpp  qpsk.cpp
lib/decoders/: basic_decoder.cpp  precomputed_decoder.cpp  simd_decoder.cpp
lib/modes/: coding_mode.cpp  decoding_mode.cpp  simulation_mode.cpp
lib/utils/: json_helpers.cpp
scripts/: plot_bler_curves.py
src/: main.cpp  system.cpp
tests/: CMakeLists.txt  test_block_code.cpp  test_channel.cpp  test_decoders.cpp  test_encoder.cpp  test_json_helpers.cpp  test_qpsk.cpp
